--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.12.3",
     "dependencies": "^0.0.1",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "peer": "^0.5.3",
     "react": "16.13.1",
     "react-native": "0.63.3",
